Desktop going to die of lack of ram, commiting before it does even though not much done since last commit.